--- a/20200125/custom.css
+++ b/20200125/custom.css
@@ -1,5 +1,5 @@
 /* スライド全体のフォントの種類、サイズ */
-.rise-enabled .reveal .slides
+.reveal .slides
 {
     font-size: 26px;
     font-family: "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
@@ -7,20 +7,20 @@
 }
 
 /* 文字の色関係 */
-.rise-enabled .reveal .slides :-webkit-any(h3, h4, h5, h6, p, li),
-.rise-enabled .reveal .slides div.output_subarea>pre
+.reveal .slides :-webkit-any(h3, h4, h5, h6, p, li),
+.reveal .slides div.output_subarea>pre
 {
 	margin: 1px 0;
     color: #fcf1d3;
 }
 
-.rise-enabled .reveal .slides div.output_subarea.output_html.renderd_html.output_result>pre
+.reveal .slides div.output_subarea.output_html.renderd_html.output_result>pre
 {
 	color: #fcf1d3;
 }
 
 /* h1のデザイン */
-.rise-enabled .reveal .slides :-webkit-any(h1)
+.reveal .slides :-webkit-any(h1)
 {
     padding: 0.5em 1em;
     margin: 1px 0;
@@ -37,7 +37,7 @@ p {
     padding: 0;
 }
 
-.rise-enabled .reveal .slides :-webkit-any(h2) {
+.reveal .slides :-webkit-any(h2) {
     padding: 0 0 0.25em 0.5em;/*上下 左右の余白*/
     color: #fcf1d3;/*文字色*/
     background: transparent;/*背景透明に*/
@@ -46,13 +46,13 @@ p {
 }
 
 /* リンクハイライト */
-.rise-enabled .reveal .slides a
+.reveal .slides a
 {
     color: yellow;
 }
 
 /* スライド背景色 */
-.rise-enabled .reveal
+.reveal
 {
     background-color: #3261ab;
     /* element-overrides */
@@ -81,33 +81,33 @@ td{
 }
 
 /* In[] の色 */
-.rise-enabled .reveal .slides div.prompt.input_prompt
+.reveal .slides div.prompt.input_prompt
 {
 	margin: 1px 0;
     color: #80D5FF;
 }
 
 /* Out[]の色 */
-.rise-enabled .reveal .slides div.prompt.output_prompt
+.reveal .slides div.prompt.output_prompt
 {
 	margin: 1px 0;
     color: #FF1A40;
 }
 
 /* Outに出力されるwarningの背景 */
-.rise-enabled .reveal .slides div.warn
+.reveal .slides div.warn
 {
     color: #44a5cb
 }
 
 /* html表記のoutput を調整 */
-.rise-enabled .reveal .slides div.output_subarea.output_html.rendered_html.output_result
+.reveal .slides div.output_subarea.output_html.rendered_html.output_result
 {
 	color: white;
 }
 
 /* コードの背景色 表面色 フォントサイズ */
-.rise-enabled .reveal .slides code
+.reveal .slides code
 {
 	margin: 1px 0;
 	background-color: brack;
